include ms timestamp in WP state logs

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,8 @@ loader_version=0.12.2
 fabric_version=0.18.0+build.387-1.16.1
 
 # Mod Properties
-mod_version = 2.3.3
+mod_version = 2.3.3-knawk
 maven_group = me.voidxwalker
-mod_id = worldpreview
+mod_id = worldpreview-knawk
 
 
